# JCN-exchaige-assistant

./: .gitignore  Dockerfile  README.md  alembic.ini  env.example  example.env  pyproject.toml
.github/workflows/: ci.yml  cicd.yml  release.yml
alembic/: env.py
alembic/versions/: 028938fda4a9_initdb.py  0f1fe4dd7501_initdb.py  2024_01_30_1746-028938fda4a9.py  2024_01_31_1622-253ae4dadf17.py  2024_02_01_1551-a5fab1ef2caa.py  2024_02_01_2256-37182576a108.py  2024_02_04_2228-799782738c42.py  2024_02_05_2242-c04576b069f2.py  2024_02_15_1319-452224a6977a.py  2024_03_11_1527-57d802e36157.py  2024_03_12_1619-9b00df8662b6.py  2024_03_15_0024-0eff7b099d95.py  2024_03_19_1410-6e2483aca79e.py  2024_04_07_1025-9090fa8ef128.py  65687c3dc032_initdb.py  a903f02e95e3_initdb.py  d653395adde3_initdb.py
app/: app.py  bot.py  config.py  containers.py
app/bots/: telegram_bot.py
app/clients/: gina.py  vendors_bot.py
app/clients/firebase/: firestore.py
app/controllers/: __init__.py  messages.py
app/exceptions/: api_base.py  auth.py
app/handlers/: __init__.py  auth.py  bot_handler.py  currency.py  exchange_rate.py  files.py  handing_fee.py  handling_fee.py  order.py  telegram.py  user.py
app/handlers/telegram/: __init__.py  account.py  group_type.py  messages.py
app/handlers/telegram_bot/: base.py  messages.py
app/models/: __init__.py  auth.py  currency.py  exchange_rate.py  gina.py  handing_fee.py  handling_fee.py  message.py  order.py  telegram.py  user.py
app/providers/: __init__.py  currency.py  exchange_rate.py  files.py  gina.py  handing_fee.py  handling_fee.py  message.py  order.py  price.py  user.py  vendors_bot.py
app/schemas/: auth.py  broadcast_message.py  currency.py  exchange_rate.py  files.py  gina.py  group_type.py  mixins.py  order.py  price.py  user.py  vendors_bot.py
tests/: test_telegram_bot.py
tests/clients/: test_gina.py
tests/controllers/: test_messages.py
tests/fixtures/: __init__.py  controllers.py  handlers.py  providers.py
tests/handlers/: test_auth.py  test_currency.py  test_handling_fee.py  test_user.py  test_user_handler.py
tests/providers/: test_currency.py  test_exchange_rate.py  test_handing_fee.py  test_handling_fee.py  test_order.py  test_price.py  test_user.py
(+66 files in other folders)
